# claude-radar

./: .gitignore  LICENSE  README.md  README.zh-CN.md  install.sh  pyproject.toml  qa-report.md  review-report.md  uninstall.sh
claude_radar/: __init__.py  cli.py  render.py  state.py  tui.py
docs/: architecture.md
docs/screenshots/: .gitkeep  demo.cast
hooks/: state-tracker.sh
install/: inject-hooks.py
scripts/: demo_scenario.py
tests/: test_cli.py  test_hook.py  test_inject.py  test_inject_hooks.py  test_render.py  test_state.py
